<resources>
    <string name="app_name">Blot Smart Note</string>

    <string name="player1">Tigran</string>
    <string name="player2">Tiko</string>
    <string name="player3">Hovo</string>
    <string name="player4">Smbo</string>
    <string name="team1">Team1</string>
    <string name="team2">Team2</string>
    <string name="order">0</string>
    <string name="points">points and combinations</string>

    <string name="announce">Announce</string>

    <string name="terz">Terz</string>
    <string name="hitsun">Fifty</string>
    <string name="sto">Hundred</string>
    <string name="blot">Blot</string>
    <string name="fourpaper">4 cards</string>
    <string name="attention_toast">The declared number must be greater than the 7th</string>

</resources>
