<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/background_1" />

    <LinearLayout
        android:id="@+id/layout_vernagir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:inputType="numberSigned"
            android:maxLength="3"
            android:id="@+id/txtView_1"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_weight="3"
            android:background="@drawable/btn_top_fon"
            android:clickable="false"
            android:gravity="center"
            android:hint="@string/team1"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/txtView_2"
            android:inputType="numberSigned"
            android:maxLength="3"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_weight="3"
            android:background="@drawable/btn_top_fon"
            android:clickable="false"
            android:gravity="center"
            android:hint="@string/team2"
            android:textSize="25sp" />

        <Button
            android:id="@+id/tnm_order"
            android:hint="Order"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@drawable/btn_top_fon" />
    </LinearLayout>

    <View
        android:id="@+id/line_menu"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/layout_vernagir"
        android:background="@color/colorWhite3" />

    <TextView
        android:id="@+id/text_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/points"
        android:layout_below="@+id/layout_vernagir"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/text_point">

        <Button
            android:id="@+id/Btn_terz_minus"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="-"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/txtView_terz"
            app:layout_constraintTop_toBottomOf="@+id/chckBx_blot" />
    </LinearLayout>
</RelativeLayout>