<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/coloryellownew"
    android:orientation="vertical">



    <LinearLayout
        android:id="@+id/linearLayout_menu_med_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/cardView_padding"
            android:layout_marginRight="@dimen/cardView_padding"
            android:foreground="?android:attr/selectableItemBackground">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@color/colorBlack"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/txt_player1"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/btn_height_normal_size"
                        android:background="@android:color/transparent"
                        android:text="@string/player1"
                        android:textAllCaps="false"
                        android:textStyle="bold"
                        android:textColor="@color/coloryellownew"
                        android:textSize="@dimen/player_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="20dp"
                        android:textStyle="bold"
                        android:text="D"
                        android:textColor="@color/colorRed"
                        android:textSize="20sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@id/txt_player1"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:background="@color/coloryellownew"
                        />

                    <Button
                        android:id="@+id/txt_player2"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/btn_height_normal_size"
                        android:layout_below="@id/txt_player1"
                        android:background="@android:color/transparent"
                        android:text="@string/player2"
                        android:textAllCaps="false"
                        android:textStyle="bold"
                        android:textColor="@color/coloryellownew"
                        android:textSize="@dimen/player_size"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="30dp"
                        android:layout_marginRight="20dp"
                        android:text="D"
                        android:textStyle="bold"
                        android:textColor="@color/colorRed"
                        android:textSize="20sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/colorBlack"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <View
                        android:layout_width="2dp"
                        android:layout_height="60dp"
                        android:background="@color/coloryellownew" />

                    <Button
                        android:id="@+id/txt_player3"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/btn_height_normal_size"
                        android:background="@android:color/transparent"
                        android:text="@string/player3"
                        android:textAllCaps="false"
                        android:textStyle="bold"
                        android:textColor="@color/coloryellownew"
                        android:textSize="@dimen/player_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="20dp"
                        android:textStyle="bold"
                        android:text="D"
                        android:textColor="@color/colorRed"
                        android:textSize="20sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@id/txt_player3"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:background="@color/coloryellownew"
                        />

                    <Button
                        android:id="@+id/txt_player4"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/btn_height_normal_size"
                        android:layout_below="@id/txt_player3"
                        android:background="@android:color/transparent"
                        android:clickable="true"
                        android:text="@string/player4"
                        android:textAllCaps="false"
                        android:textStyle="bold"
                        android:textColor="@color/coloryellownew"
                        android:textSize="@dimen/player_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="30sp"
                        android:layout_marginRight="20dp"
                        android:textStyle="bold"
                        android:text="D"
                        android:textColor="@color/colorRed"
                        android:textSize="20sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:background="@color/colorBlack"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingLeft="1dp">

                    <View
                        android:layout_width="2dp"
                        android:layout_height="80dp"
                        android:background="@color/coloryellownew" />

                    <Button
                        android:id="@+id/txt_announce"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="true"
                        android:text="@string/announce"
                        android:textAllCaps="false"
                        android:textStyle="bold"
                        android:background="@android:color/transparent"
                        android:textColor="@color/coloryellownew"
                        android:textSize="15sp" />
                </RelativeLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <View
            android:id="@+id/line_menu"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorBlack" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView_Result"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_below="@id/linearLayout_menu_med_line">

        <LinearLayout
            android:id="@+id/ResultLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:onClick="resultLayout_Click"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_weight="3"
                    android:clickable="false"
                    android:gravity="center"
                    android:hint="0"
                    android:textSize="20sp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_weight="3"
                    android:clickable="false"
                    android:gravity="center"
                    android:hint="0"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/Img_mast"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/x_24"
                        android:onClick="open_extra_Order_buttons" />

                    <TextView
                        android:id="@+id/txtView_order"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:gravity="center"
                        android:ems="2"
                        android:hint="@string/order"
                        android:textSize="20sp"
                        android:onClick="open_extra_Order_buttons" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/cardView_padding"
        android:layout_marginRight="@dimen/cardView_padding"

        android:orientation="horizontal">


        <TextView
            android:id="@+id/txtView_1"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_weight="3"
            android:background="@color/colorBlack"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/team1"
            android:textColor="@color/coloryellownew"
            android:textStyle="bold"
            android:onClick="open_extra_buttons"
            android:textSize="20sp" />


        <View
            android:layout_width="2dp"
            android:layout_height="20dp"
            android:background="@color/coloryellownew" />

        <TextView
            android:id="@+id/txtView_2"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_weight="3"
            android:background="@color/colorBlack"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/team2"
            android:textColor="@color/coloryellownew"
            android:textStyle="bold"
            android:onClick="open_extra_buttons"
            android:textSize="20sp" />


        <View
            android:layout_width="2dp"
            android:layout_height="20dp"
            android:background="@color/coloryellownew" />

        <TextView
            android:id="@+id/tnm_order"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_weight="3"
            android:background="@color/colorBlack"
            android:clickable="false"
            android:gravity="center"
            android:text="Order"
            android:textColor="@color/coloryellownew"
            android:onClick="open_extra_Order_buttons"
            android:textStyle="bold"
            android:textSize="20sp" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="60dp"

        android:tint="@android:color/white"
        app:fabSize="mini"
        app:srcCompat="@drawable/ic_add_black_24dp"
        tools:ignore="VectorDrawableCompat" />

</RelativeLayout>